Adicionando smoke teste